# BLAS_feed_forward_net

./: CMakeLists.txt  README.md  binary_write.cpp  convert_to_binary.cpp  mult_data.cpp  readme  run_net_blas.cpp  simplified_binary_write.cpp  test_data_to_binary.cpp
nnlib/: .nnlib_src.cpp.swo  nnlib_src.cpp
nnlib/include/: .nnlib.h.swp  nnlib.h
